Fixed bug where next carousel image would overflow into the current view

--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ code {
   display: flex;
   width: 100%;
   height: 70vh;
+  min-height: 500px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -184,6 +185,10 @@ code {
 
 .BrainhubCarousel {
   width: 100%;
+}
+
+.BrainhubCarouselItem {
+  overflow: hidden;
 }
 
 .content {
